# v-common

./: Cargo.toml  README.md
doc/: backend.md  vstorage.md
src/: lib.rs
src/az_impl/: az_lmdb.rs  az_lmdb_static.rs  common.rs  formats.rs  mod.rs  stat_manager.rs
src/az_lmdb/: az_lmdb.rs  mod.rs
src/ft_xapian/: index_schema.rs  key2slot.rs  mod.rs  vql.rs  xapian_reader.rs  xapian_vql.rs
src/module/: common.rs  info.rs  mod.rs  module.rs  module_impl.rs  remote_indv_r_storage.rs  ticket.rs  veda_backend.rs  veda_module.rs
src/onto/: cbor2individual.rs  datatype.rs  individual.rs  individual2json.rs  individual2msgpack.rs  individual2turtle.rs  json2individual.rs  mod.rs  msgpack2individual.rs  onto.rs  onto_impl.rs  onto_index.rs  parser.rs  resource.rs  turtle_formatters_with_prefixes.rs
src/runtime_wrapper/: mod.rs  tokio_0_2.rs  tokio_1.rs
src/search/: awc_wrapper.rs  clickhouse_client.rs  common.rs  ft_client.rs  mod.rs  sparql_client.rs  sparql_params.rs  sql_lex_tree.rs  sql_params.rs
src/storage/: async_storage.rs  common.rs  lmdb_storage.rs  mdbx_storage.rs  memory_storage.rs  mod.rs  remote_storage_client.rs  storage.rs  tt_storage.rs
src/v_api/: api_client.rs  common_type.rs  mod.rs  obj.rs
v-authorization-impl/: Cargo.toml  README.md
v-authorization-impl/common/: Cargo.toml
v-authorization-impl/common/src/: az_lmdb.rs  lib.rs  stat_manager.rs
v-authorization-impl/doc/: 00_overview.md  01_getting_started.md  02_configuration.md  03_api_reference.md  04_examples.md  05_architecture.md  06_implementation_details.md  07_testing.md  08_troubleshooting.md  README.md
v-authorization-impl/src/: az_context.rs  az_lmdb.rs  az_mdbx.rs  az_tarantool.rs  common.rs  lib.rs  runtime_wrapper.rs  stat_manager.rs
v-authorization-impl/src/runtime_wrapper/: mod.rs  tokio_0_2.rs  tokio_1.rs
v-authorization-impl/tt2-lmdb/: Cargo.toml
v-authorization-impl/tt2-lmdb/src/: az_tarantool.rs  runtime_wrapper.rs
v-authorization-impl/tt3-lmdb/: Cargo.toml
v-authorization-impl/tt3-lmdb/src/: az_context.rs  lib.rs  runtime_wrapper.rs
v-authorization-lmpl/: Cargo.toml  README.md
v-authorization-lmpl/src/: az_lmdb.rs  stat_manager.rs
v-storage/: Cargo.toml
