[package]
name = "v-common"
version = "0.4.12"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "common part of the veda platform"
license     = "MIT"

#[lib]
#path = "src/lib.rs"

[dependencies]
tokio = { version = "0.2" }
futures = "=0.3"
nng = "1.0.0"
nanoid = "0.3.0"
num = "0.4.0"
num-traits = "0.2.14"
chrono = "0.4"
v-cbr-codec = "0.7.1"
rmp = "^0.8"
rmp-serialize = "^0.8"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rust_decimal = "=1.12.3"
rio_turtle = "0.5.3"
rio_api = "0.5.3"
derivative = "2.1.1"
rusty_tarantool = "0.2.10"
lmdb-rs-m = "0.7.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-ini = "0.16"
clickhouse-rs = { version = "1.0.0-alpha.1", default-features = false, features = ["async_std"] }
url = "2.1.1"
lazy_static = "1.4"
scan_fmt = "0.1.3"
crc32fast = "1.2.0"
maplit = "1.0.2"
xapian-rusty = "=0.0.49"
regex = "1.5.4"
regex-syntax = "=0.6.25"
stopwatch = "0.0.7"
crossbeam-channel = "0.4"
signal-hook = "0.3.7"
exitcode = "1.1.2"
env_logger = "0.6"
warp = { version = "0.2.5", features = ["tls"] }
anyhow = "1.0.32"
align-data = "0.1.0"
thread-id = "4.0.0"
iri-string = "0.4.0"

evmap = "10.0.2"

v_authorization = "=0.1.5"
#v_authorization = { package = "v_authorization", path = "../v-authorization" }

v_queue = "=0.2.3"
#v_queue = { package = "v_queue", path = "../v-queue" }

# sudo apt install libglib2.0-dev
