[package]
name = "v-common"
version = "0.10.7"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "common part of the veda platform"
license     = "MIT"

#[lib]
#path = "src/lib.rs"

[dependencies]
tokio = { version = "0.2" }
futures = "=0.3"
nng = "1.0.1"
nanoid = "0.3.0"
num = "0.4.0"
num-traits = "0.2.14"
chrono = "0.4.19"
chrono-tz = "0.5.3"
v-cbr-codec = "0.7.1"
rmp = "^0.8"
#rmp-serialize = "^0.8"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rust_decimal = "=1.32.0"
rio_turtle = "0.5.3"
rio_api = "0.5.3"
derivative = "2.1.1"
rusty_tarantool = "=0.2.10"
lmdb-rs-m = "0.7.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-ini = "0.18"
clickhouse-rs = { version = "1.0.0-alpha.1", default-features = false, features = ["async_std"] }
url = "2.1.1"
lazy_static = "1.4"
scan_fmt = "0.1.3"
crc32fast = "1.2.0"
maplit = "1.0.2"
regex = "1.7.1"
stopwatch = "0.0.7"
crossbeam-channel = "0.4"
signal-hook = "0.3.7"
exitcode = "1.1.2"
env_logger = "0.6"
warp = { version = "0.3.6", features = ["tls"] }
anyhow = "1.0.32"
align-data = "0.1.0"
thread-id = "4.2.0"
iri-string = "0.7.0"
sqlparser = "0.25.0"
evmap = "10.0.2"
spargebra = "0.2.8"
oxrdf = { version = "0.1.0" }

version = "3.0.0"
git-version = "0.3.9"

strum = "0.26"
strum_macros = "0.26"
awc = { version = "2.0.3", features = ["openssl"] }
string-builder = "0.2"
klickhouse = "0.13.0"

#xapian-rusty = { package = "xapian-rusty", path = "../xapian-rusty" }
xapian-rusty = "=0.0.55"

v_authorization = "=0.4.0"
#v_authorization = { package = "v_authorization", path = "../v-authorization" }

v_queue = "=0.2.4"
rand = "0.7.3"
http = "0.2.9"
bytes = "0.5.6"
futures-util = "0.3.30"
#v_queue = { package = "v_queue", path = "../v-queue" }

# sudo apt install libglib2.0-dev
