[package]
name = "v-common"
version = "0.19.2"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "common part of the veda platform"
license     = "MIT"

[features]
#default = ["tokio_0_2", "tt_2", "awc_2"]
default = ["tokio_0_2", "tt_2", "awc_2"]
tokio_0_2 = ["tokio_dep_0_2", "v-storage/tokio_0_2"]
tokio_1 = ["tokio_dep_1", "v-storage/tokio_1"]
tt_2 = ["rusty_tarantool_2", "v-storage/tt_2"]
tt_3 = ["rusty_tarantool_3", "v-storage/tt_3"]
awc_2 = ["awc_old"]
awc_3 = ["awc_new"]
extended-siginfo = []

[dependencies]
tokio_dep_0_2 = { version = "0.2", optional = true, package = "tokio", features = ["full"] }
tokio_dep_1 = { version = "1.45", optional = true, package = "tokio", features = ["full"] }

# Conditional dependencies with aliases
rusty_tarantool_2 = { version = "=0.2.11", optional = true, package = "rusty_tarantool" }
rusty_tarantool_3 = { version = "=0.3.0", optional = true, package = "rusty_tarantool" }
awc_old = { version = "2.0.3", optional = true, package = "awc", features = ["openssl"] }
awc_new = { version = "3.5", optional = true, package = "awc", features = ["openssl"] }

futures = "0.3"
nng = "1.0.1"
nanoid = "0.4"
chrono = "0.4.41"
chrono-tz = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] } 
rust-ini = "0.18" 
v-clickhouse-rs = { version = "1.0.1-alpha.1", default-features = false, features = ["async_std"] }
url = "2.5"
lazy_static = "1.5"
scan_fmt = "0.1.3" 
crc32fast = "1.4"
maplit = "1.0.2"
regex = "1.11"
crossbeam-channel = "0.5"
signal-hook = "0.3.18"
exitcode = "1.1.2"
env_logger = "0.11"
warp = { version = "0.3.7", features = ["tls"] }
anyhow = "1.0.98"
align-data = "0.1.0"
thread-id = "4.2.2"
sqlparser = "0.30" 
evmap = "10.0.2"
spargebra = "0.2.8"
oxrdf = { version = "0.1.0" } 
version = "3.0.0"
git-version = "0.3.9"
strum = "0.26"
strum_macros = "0.26"
string-builder = "0.2"
klickhouse = "0.13.0"
rand = "0.7.3" 
http = "0.2.12" 
bytes = "0.5.6" 
futures-util = "0.3.31"

xapian-rusty = "=0.0.56"
v_authorization = "=0.5.1"
v_queue = "=0.2.7"
v-individual-model = "0.2.6"
#v-individual-model = { package = "v-individual-model", path = "../v-individual-model"}

lmdb-rs-m = "0.8.0"
v-storage = "0.1.3"
#v-storage = { package = "v-storage", path = "../v-storage"}

v-authorization-impl = { version = "0.4.2"}
