[package]
name = "v-authorization-impl"
version = "0.4.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "LMDB implementation for Veda authorization"
license = "MIT"

[features]
default = []
# Tarantool support with tokio version selection
tt = ["tt_1"]  # alias for tt_1 (default tokio 1.x)
tt_1 = ["rusty_tarantool_3", "tokio_dep_1"]
tt_02 = ["rusty_tarantool_2", "tokio_dep_0_2", "rmp-serde", "rmpv"]

[dependencies]
log = "0.4"
chrono = "0.4.41"
heed = "0.22.0"
v_authorization = "=0.5.1"
nng = "1.0.1"
rand = "0.9.2"

# Fix rmp version compatibility for rusty_tarantool 0.2.x
rmp = "=0.8.11"
rmp-serde = { version = "=0.14.4", optional = true }
rmpv = { version = "=0.4.7", optional = true }

# Tarantool client with tokio 1.x (optional)
rusty_tarantool_3 = { version = "=0.3.0", optional = true, package = "rusty_tarantool" }
tokio_dep_1 = { version = "1.45", optional = true, package = "tokio", features = ["rt", "rt-multi-thread"] }

# Tarantool client with tokio 0.2 (optional)
rusty_tarantool_2 = { version = "=0.2.10", optional = true, package = "rusty_tarantool" }
tokio_dep_0_2 = { version = "0.2", optional = true, package = "tokio", features = ["full"] }

