[package]
name = "v-authorization-lmpl"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "LMDB implementation for Veda authorization"
license = "MIT"

[dependencies]
log = "0.4"
chrono = "0.4.41"
lmdb-rs-m = "0.8.1"
v_authorization = "=0.5.1"
nng = "1.0.1"
rand = "0.7.3"

