[package]
name = "v-authorization-impl-tt2-lmdb"
version = "0.6.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "Veda authorization with Tarantool 2 and LMDB backends"
license = "MIT"

[dependencies]
log = "0.4"
v_authorization = "=0.5.1"
v-authorization-impl-common = { version = "0.6.0", path = "../common" }

# Tarantool client with tokio 0.2
rusty_tarantool = "=0.2.11"
tokio = { version = "0.2", features = ["full"] }

# Fix rmp version compatibility
rmp = "=0.8.14"
rmp-serde = "=0.14.4"
rmpv = "=0.4.7"
