[package]
name = "v-authorization-impl-tt3-lmdb"
version = "0.6.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"
description = "Veda authorization with Tarantool 3 and LMDB backends"
license = "MIT"

[dependencies]
log = "0.4"
v_authorization = "=0.5.1"
v-authorization-impl-common = { path = "../common" }

# Tarantool client with tokio 1.x
rusty_tarantool = "=0.3.0"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread"] }
